Avoid flickering on macOS

--- a/css/ZeroHello.css
+++ b/css/ZeroHello.css
@@ -1,4 +1,4 @@
-body { background-color: #EDF2F5; font-family: Roboto, 'Segoe UI', 'Helvetica Neue'; margin: 0px; padding: 0px; backface-visibility: hidden; height: 100%; position: absolute; width: 100%; overflow-x: hidden; height: 15000px }
+body { background-color: #EDF2F5; font-family: Roboto, 'Segoe UI', 'Helvetica Neue'; margin: 0px; padding: 0px; backface-visibility: hidden; height: 100%; position: absolute; width: 100%; overflow-x: hidden; height: 15000px; -webkit-font-smoothing: subpixel-antialiased; }
 body.loaded { height: 100%; overflow: auto }
 h1, h2, h3, h4 { font-family: 'Roboto', Arial, sans-serif; font-weight: 200; font-size: 30px; margin: 0px; padding: 0px }
 h1 { font-family: 'Text Me One', sans-serif }
